CHANGES.txt - 07/31/2003
------------------------

CHANGES IN HTMLDOC v1.8.24

    NEW FEATURES

	- HTMLDOC now offers an "htmlsep" output type which
	  generates HTML output with a separate file for each
	  heading in the table of contents.
	- HTMLDOC now includes LINK elements in generated HTML
	  so that intelligent browsers like Mozilla can show
	  next/prev/contents/top buttons.
	- HTMLDOC now supports the BORDERCOLOR attribute for
	  tables, a MSIE extension.
	- The "strict HTML" mode now reports unresolved local
	  links.
	- Added support for HP LaserJet 5000 and Xerox DocuPrint
	  2000/100 printer commands.

    CHANGES

	- The command-line now allows --fontsize values from 4
	  to 26 to match the GUI.
	- Now use a 0.001 point tolerance when checking for
	  content that overflows the page/cell.
	- HTMLDOC no longer enables interpolation of 2-color
	  images.
	- The default vertical alignment of images is "BOTTOM"
	  to match the HTML specification.

    BUG FIXES

	- Switching between landscape and portrait orientations
	  would cause margin creepage.
	- Images did not default to align=bottom, and the
	  align=bottom line spacing calculation was incorrect.
	- Whitespace before a link was underlined.
	- Fixed a table column sizing bug.
	- HTMLDOC didn't read back the HTTP response properly in
	  all situations.
	- Fixed some more PNG transparency cases.
	- The PageBoundingBox comments in PostScript output did
	  not account for the back page when duplexing was
	  enabled.
	- HTMLDOC generated an incorrect image mask for some
	  images.
	- The first page of each chapter did not use the custom
	  page number if it was placed inside the heading.


CHANGES IN HTMLDOC v1.8.23

    NEW FEATURES

	- HTMLDOC now supports a full alpha channel in PNG
	  files.
	- HTMLDOC now reports an error when a table, image, or
	  section of text overflows into an adjacent table cell
	  or off the right edge of the page.

    CHANGES
